# libvirt-rust

./: .gitlab-ci.yml  .gitpublish  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  README.md
.github/: lockdown.yml
.github/workflows/: lockdown.yml
ci/: gitlab.yml  libvirt-centos-7.Dockerfile  libvirt-centos-8.Dockerfile  libvirt-centos-stream.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-9.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  libvirt-ubuntu-1804.Dockerfile  libvirt-ubuntu-2004.Dockerfile  manifest.yml  refresh
ci/buildenv/: almalinux-10.sh  almalinux-8.sh  almalinux-9.sh  alpine-320.sh  centos-stream-10.sh  centos-stream-8.sh  centos-stream-9.sh  debian-11.sh  debian-12-cross-aarch64.sh  debian-12-cross-armv6l.sh  debian-12-cross-armv7l.sh  debian-12-cross-i686.sh  debian-12-cross-mips64el.sh  debian-12-cross-mipsel.sh  debian-12-cross-ppc64le.sh  debian-12-cross-s390x.sh  debian-12.sh  fedora-36.sh  fedora-39.sh  fedora-42.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-tumbleweed.sh  ubuntu-2404.sh
ci/cirrus/: build.yml  freebsd-13.vars  freebsd-14.vars  freebsd-15.vars  macos-13.vars
ci/containers/: almalinux-8.Dockerfile  almalinux-9.Dockerfile  alpine-319.Dockerfile  alpine-320.Dockerfile  alpine-edge.Dockerfile  centos-8.Dockerfile  centos-stream-10.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-opensuse-152.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  debian-12-cross-aarch64.Dockerfile  debian-12-cross-armv6l.Dockerfile  debian-12-cross-armv7l.Dockerfile  debian-12-cross-i686.Dockerfile  debian-12-cross-mips64el.Dockerfile  debian-12-cross-mipsel.Dockerfile  debian-12-cross-ppc64le.Dockerfile  debian-12-cross-s390x.Dockerfile  debian-12.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-37.Dockerfile  fedora-38.Dockerfile  fedora-39.Dockerfile  (+29 more)
ci/gitlab/: build-templates.yml  builds.yml  containers.yml  sanity-checks.yml
ci/lcitool/projects/: libvirt-rust.yml
examples/: auth.rs  console-read.rs  console.rs  guest_agent.rs  hello.rs  migrate.rs  suspend.rs
src/: common.rs  connect.rs  domain.rs  domain_snapshot.rs  enumutil.rs  error.rs  event.rs  host.rs  interface.rs  lib.rs  network.rs  nodedev.rs  nwfilter.rs  secret.rs  storage_pool.rs  storage_vol.rs  stream.rs  typedparam.rs  typedparams.rs  util.rs
tests/: api.rs  connect.rs  domain.rs  integration_qemu.rs  interface.rs  libvirtd.sasl  network.rs  storage_pool.rs  stream.rs  symbols.rs
tests/common/: mod.rs
tests/linker/: Cargo.toml
tests/linker/src/: main.rs
tests/symbols/: Cargo.toml
tests/symbols/src/: lib.rs
tools/: api_tests.py
virt-sys/: Cargo.toml  build.rs  wrapper.h
virt-sys/bindgen/: bindings.rs
virt-sys/src/: lib.rs
