[package]
name = "virt"
version = "0.2.11"
edition = "2018"
authors = ["Sahid Orentino Ferdjaoui <sahid.ferdjaoui@libremel.fr>",]
license = "LGPL-2.1"
readme = "README.md"
description = "Rust bindings to the libvirt C library"
documentation = "https://docs.rs/virt"
keywords = ["libvirt", "virtualization", "KVM", "QEMU", "Xen",]
categories = ["api-bindings", "emulators",]
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage  = "https://libvirt.org/"

[dependencies]
libc = "0.2.0"
virt-sys = { path = "virt-sys", version = "0.1.0" }

[features]
qemu = ["virt-sys/qemu"]
