[package]
name = "virt"
version = "0.4.3"
edition = "2021"
authors = ["Sahid Orentino Ferdjaoui <sahid.ferdjaoui@libremel.fr>",]
license = "LGPL-2.1"
readme = "README.md"
description = "Rust bindings to the libvirt C library"
documentation = "https://docs.rs/virt"
keywords = ["libvirt", "virtualization", "KVM", "QEMU", "Xen",]
categories = ["api-bindings", "emulators",]
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage  = "https://libvirt.org/"
rust-version = "1.63"

[dependencies]
libc = "0.2.0"
virt-sys = { path = "virt-sys", version = "0.3.1" }
uuid = "1.7.0"

[dev-dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde-xml-rs = { version = "0.6.0" }
pkg-config = { version = "0.3.0" }
regex = { version = "~1.9.0" }
termios = "0.3.3"

[features]
qemu = ["virt-sys/qemu"]
bindgen_regenerate = ["virt-sys/bindgen_regenerate"]
api_coverage = []

[[example]]
name = "guest_agent"
path = "examples/guest_agent.rs"
required-features = [ "qemu" ]
