[package]
name = "virt"
version = "0.4.3"
edition = "2021"
authors = ["Sahid Orentino Ferdjaoui <sahid.ferdjaoui@libremel.fr>",]
license = "LGPL-2.1"
readme = "README.md"
description = "Rust bindings to the libvirt C library"
documentation = "https://docs.rs/virt"
keywords = ["libvirt", "virtualization", "KVM", "QEMU", "Xen",]
categories = ["api-bindings", "emulators",]
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage  = "https://libvirt.org/"
rust-version = "1.63"

[dependencies]
virt-sys = { path = "virt-sys", version = "0.3.2" }
uuid = "1.7.0"
# Pin for compat with Rust 1.63.0 / Debian 12
libc = { version = "=0.2.183" }

[dev-dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde-xml-rs = { version = "0.6.0" }
pkg-config = { version = "0.3.0" }
regex = { version = "~1.9.0" }
termios = "0.3.3"
# Pin for compat with Rust 1.63.0 / Debian 12
syn = { version = "=2.0.106" }
xml-rs = { version = "=0.8.27" }
quote = { version = "=1.0.41" }
unicode-ident = { version = "=1.0.22" }
proc-macro2 = { version = "=1.0.103" }
log = { version = "=0.4.28" }
# Pin for compat with Rust 1.75.0 / Ubuntu 22.04 & 24.04
uuid = { version = "=1.20.0" }

[features]
qemu = ["virt-sys/qemu"]
bindgen_regenerate = ["virt-sys/bindgen_regenerate"]
api_coverage = []
api_coverage_full = []

[[example]]
name = "guest_agent"
path = "examples/guest_agent.rs"
required-features = [ "qemu" ]
