[package]
name = "virt-sys"
version = "0.1.0"
edition = "2018"
authors = ["Wim de With <wf@dewith.io>",]
license = "LGPL-2.1"
description = "Native bindings to the libvirt C library"
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage = "https://libvirt.org/"
categories = ["external-ffi-bindings",]
links = "virt"

[dependencies]
libc = "0.2.122"

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.25"
