[package]
name = "virt-sys"
version = "0.3.0"
edition = "2018"
authors = ["Wim de With <wf@dewith.io>",]
license = "LGPL-2.1"
description = "Native bindings to the libvirt C library"
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage = "https://libvirt.org/"
categories = ["external-ffi-bindings",]
links = "virt"

[dependencies]
libc = "0.2.122"

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }
pkg-config = "0.3.25"

[features]
qemu = []
bindgen_regenerate = ["bindgen"]
