[package]
name = "virt-sys"
version = "0.3.2"
edition = "2021"
authors = ["Wim de With <wf@dewith.io>",]
license = "LGPL-2.1"
description = "Native bindings to the libvirt C library"
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage = "https://libvirt.org/"
categories = ["external-ffi-bindings",]
links = "virt"
rust-version = "1.63"

[dependencies]
# Pin for compat with Rust 1.63.0 / Debian 12
libc = { version = "=0.2.183" }

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }
pkg-config = "0.3.25"

[features]
qemu = []
bindgen_regenerate = ["bindgen"]
